--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -1,69 +1,250 @@
 .header {
-  z-index: 5;
-  padding: 44px 0;
-  position: absolute;
-  width: 100%;
-  top: 0;
-  &-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-  }
-  &-logo {
-    width: 112px;
-    height: 52px;
-  }
-  &-wrapper {
-    display: flex;
-    align-items: center;
-    gap: 30px;
-  }
-  &-menu {
-    ul {
+  //header top
+  &-top {
+    background: #f2f2f2;
+    padding: 10px 0;
+    &__container {
       display: flex;
       align-items: center;
-      gap: 2px;
+      justify-content: space-between;
+      gap: 10px;
+    }
+    &__wrapper {
+      display: flex;
+      align-items: center;
+      gap: 40px;
+    }
+  }
+  &-cities {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.4;
+    color: #484f55;
 
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-      li {
-        margin: 0;
-      }
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+  &-email {
+    font-weight: 400;
+    font-size: 12px;
+
+    line-height: 1.5;
+    color: #484f55;
+    border-bottom: 1px dashed #484f55;
+    &:hover {
+
+    }
+  }
+  &-address, &-phones {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.5;
+    color: #484f55;
+    &__ico {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    &__wrapper {
+      display: flex;
+      align-items: center;
+      gap: 15px;
       a {
-        color: var(--Neutrals-Black-100, #0B0B0B);
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 480;
-        line-height: normal;
-        letter-spacing: 0.36px;
-
-        padding: 0 12px;
-
-        transition: all .3s ease;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.5;
+        color: #484f55;
         &:hover {
-          opacity: 0.7;
+          color: var(--akcent-1);
         }
       }
     }
   }
-  &-feedback {
-    color: #FFF;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 480;
-    line-height: 32px; /* 177.778% */
-    letter-spacing: 0.18px;
+  &-socials {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    svg {
+      path {
+        transition: all .3s ease;
+      }
+      &:hover {
+        path {
+          fill: var(--akcent-1);
+        }
+      }
+    }
+  }
 
-    padding: 10px 30px;
+  //header middle
+  &-middle {
+    padding: 12px 0;
+    &__container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
+    }
+    &__content {
+      display: flex;
+      align-items: center;
+      gap: 25px;
+    }
+  }
+  &-catalog {
+    &__trigger {
+      display: flex;
+      align-items: center;
+      gap: 13px;
 
-    border-radius: 120px;
-    background: #0B0B0B;
+      padding: 14px 20px;
+      background: #535353;
+      border-radius: 12px;
 
-    transition: all .3s ease;
-    &:hover {
-      opacity: 0.7;
+      font-weight: 600;
+      font-size: 15px;
+      line-height: 1.2;
+      text-align: center;
+      color: #fff;
+
+      cursor: pointer;
+      transition: all .3s ease;
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+    &__ico {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .close {
+        display: none;
+      }
+    }
+  }
+  &-search {
+    width: 485px;
+    max-width: 485px;
+
+    position: relative;
+    input {
+      width: 100%;
+      height: 44px;
+      padding: 12px 55px 12px 13px;
+
+      font-weight: 400;
+      font-size: 14px;
+      color: #1a1a1a;
+
+      border: 1px solid #c5c5c5;
+      border-radius: 12px;
+      outline: none;
+      transition: all .3s ease;
+      &::placeholder {
+        color: #9b9b9b;
+      }
+      &:focus {
+        border: 1px solid #08a826;
+        + button {
+          &#js-search-submit {
+            path {
+              fill: #08a826;
+            }
+          }
+        }
+      }
+    }
+    button {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      border: none;
+      background: none;
+      outline: none;
+      cursor: pointer;
+      &#js-search-submit {
+        right: 12px;
+      }
+      &#js-search-reset {
+        right: 50px;
+        display: none;
+      }
+    }
+  }
+  &-nav {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    a {
+      display: flex;
+      flex-direction: column;
+      gap: 3px;
+      justify-content: center;
+
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 1.14286;
+      text-align: center;
+      color: #484f55;
+      transition: all .3s ease;
+      &.header-login {
+        flex-direction: row;
+        align-items: center;
+        gap: 9px;
+
+        background: #eeeff1;
+        border-radius: 12px;
+
+        padding: 10px 14px;
+      }
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+  }
+
+  //header bottom
+  &-bottom {
+    padding: 15px 0;
+    border-bottom: 1px solid #f2f2f2;
+    border-top: 1px solid #f2f2f2;
+    background: #fff;
+  }
+  &-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    column-gap: 20px;
+    row-gap: 15px;
+    li {
+      margin: 0;
+    }
+    a {
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 1.5625;
+      text-transform: uppercase;
+      text-align: center;
+      color: #222;
+      &:hover {
+        color: var(--akcent-1);
+      }
     }
   }
 }
