footer has been created

--- a/sass/common/_style.scss
+++ b/sass/common/_style.scss
@@ -141,6 +141,19 @@ h4 {
   color: #1a1a1a;
 }
 
+h5 {
+  font-weight: 700;
+  font-size: 14px;
+
+  /* line-height: 20px; */
+  line-height: 1.42929;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #fff;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
 p {
   font-weight: 400;
   font-size: 16px;
