--- a/partials/_footer.html
+++ b/partials/_footer.html
@@ -1,91 +1,183 @@
-<footer class="footer" id="contacts">
-    <div class="footer-container container">
-        <div class="footer-top">
+<div class="footer">
+	<div class="footer-top">
+		<div class="footer-top__container container">
             <div class="footer-left">
-                <a href="#" class="footer-logo">
+                <a href="/" class="footer-logo">
                     <img src="/logo2.svg" alt="">
                 </a>
-                <div class="footer-menu" style="display: none">
-                    <ul class="menu">
-                        <li>
-                            <a href="/pages/about.html">О нас</a>
-                        </li>
-                        <li>
-                            <a href="/pages/services.html">Услуги</a>
-                        </li>
-                        <li>
-                            <a href="/pages/materials.html">Материалы</a>
-                        </li>
-                        <li>
-                            <a href="#">Проекты</a>
-                        </li>
-                        <li>
-                            <a href="/pages/jobs.html">Вакансии</a>
-                        </li>
-                        <li>
-                            <a href="#">Контакты</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer-contacts">
-                    <span class="footer-city">Новосибирск</span>
-                    <span class="footer-address">630090, улица Инженерная, дом 16, офис 312/1</span>
-                    <a href="tel:+73833637714" class="footer-phone">+7 383 363-77-14</a>
-                    <a href="mailto:mail@mail.com" class="footer-email">mail@mail.com</a>
-                </div>
-            </div>
-            <div class="footer-right">
-                <div class="footer-menu">
-                    <ul class="menu">
-                        <li>
-                            <a href="/pages/about.html">О нас</a>
-                        </li>
-                        <li>
-                            <a href="/pages/services.html">Услуги</a>
-                        </li>
-                        <li>
-                            <a href="/pages/materials.html">Материалы</a>
-                        </li>
-                        <li>
-                            <a href="#">Проекты</a>
-                        </li>
-                        <li>
-                            <a href="/pages/jobs.html">Вакансии</a>
-                        </li>
-                        <li>
-                            <a href="#contacts">Контакты</a>
-                        </li>
-                    </ul>
-                </div>
-
                 <div class="footer-social">
-                    <div class="footer-social__item" id="js-to-top">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24" viewBox="0 0 20 24" fill="none">
-                            <path d="M10 0L0 10L1.41 11.41L9 3.83V24H11V3.83L18.59 11.41L20 10L10 0Z" fill="white"/>
+                    <a href="#" class="telegram">
+                        <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="16.5" cy="16.5" r="16.5" fill="#039BE5"/>
+                            <path d="M22.6023 9.32727L7.40185 14.7035C6.36448 15.0857 6.37048 15.6165 7.21153 15.8532L11.1141 16.9698L20.1435 11.7445C20.5704 11.5062 20.9605 11.6344 20.6399 11.8955L13.3243 17.9512H13.3226L13.3243 17.9519L13.0551 21.6415C13.4495 21.6415 13.6235 21.4756 13.8447 21.2798L15.7402 19.5891L19.6831 22.2604C20.4101 22.6276 20.9322 22.4389 21.1131 21.6431L23.7014 10.4549C23.9663 9.48061 23.2959 9.03947 22.6023 9.32727Z" fill="white"/>
                         </svg>
-                    </div>
-                    <div class="footer-social__wrapper">
-                        <a href="https://youtube.com" class="footer-social__item" target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
-                                <path d="M29.4098 9.25922C29.2504 8.66726 28.9384 8.12753 28.5049 7.69405C28.0715 7.26058 27.5317 6.94856 26.9398 6.78922C24.7598 6.19922 15.9998 6.19922 15.9998 6.19922C15.9998 6.19922 7.23978 6.19922 5.05978 6.78922C4.46782 6.94856 3.92809 7.26058 3.49461 7.69405C3.06113 8.12753 2.74911 8.66726 2.58978 9.25922C2.18272 11.4825 1.98519 13.739 1.99978 15.9992C1.98519 18.2594 2.18272 20.516 2.58978 22.7392C2.74911 23.3312 3.06113 23.8709 3.49461 24.3044C3.92809 24.7379 4.46782 25.0499 5.05978 25.2092C7.23978 25.7992 15.9998 25.7992 15.9998 25.7992C15.9998 25.7992 24.7598 25.7992 26.9398 25.2092C27.5317 25.0499 28.0715 24.7379 28.5049 24.3044C28.9384 23.8709 29.2504 23.3312 29.4098 22.7392C29.8168 20.516 30.0144 18.2594 29.9998 15.9992C30.0144 13.739 29.8168 11.4825 29.4098 9.25922ZM13.1998 20.1992V11.7992L20.4698 15.9992L13.1998 20.1992Z" fill="white"/>
-                            </svg>
-                        </a>
-                        <a href="https://telegram.com" class="footer-social__item" target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
-                                <path d="M2.71837 15.61C9.43052 12.7878 13.9053 10.927 16.1427 10.0281C22.5383 7.46107 23.8656 7.01524 24.7325 7.00013C24.9231 6.99718 25.3476 7.04267 25.6246 7.25881C25.8548 7.4411 25.9195 7.68763 25.9519 7.86072C25.9807 8.03363 26.0203 8.42773 25.9879 8.73536C25.6426 12.2492 24.1426 20.7762 23.38 24.712C23.0599 26.3772 22.4232 26.9356 21.8081 26.9901C20.47 27.1088 19.4556 26.1373 18.1606 25.3182C16.1355 24.0359 14.9916 23.238 13.024 21.987C10.7506 20.5412 12.2255 19.7464 13.5204 18.4478C13.8585 18.1079 19.7505 12.936 19.862 12.4669C19.8764 12.4083 19.8908 12.1895 19.7541 12.0742C19.621 11.9586 19.4232 11.9982 19.2793 12.0294C19.0743 12.0739 15.8405 14.1391 9.56721 18.2249C8.64995 18.8339 7.81903 19.1308 7.07084 19.1151C6.2507 19.0981 4.66799 18.6665 3.49174 18.2978C2.05291 17.8454 0.905441 17.6061 1.00616 16.8377C1.05652 16.4377 1.62845 16.0284 2.71837 15.61Z" fill="white"/>
-                            </svg>
-                        </a>
-                    </div>
+                    </a>
+                    <a href="#" class="whatsapp">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="34" height="33" viewBox="0 0 34 33" fill="none">
+                            <circle cx="16.5126" cy="16.5" r="16.5" fill="url(#paint0_linear_124_869)"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M25.3659 15.7678C25.3659 20.209 21.6456 23.8113 17.0565 23.8113C15.6518 23.8138 14.2694 23.4692 13.0382 22.8097L8.43768 24.2363L9.93666 19.922C9.15526 18.6705 8.74276 17.2331 8.74455 15.7678C8.74455 11.3254 12.4648 7.72314 17.0539 7.72314C21.6456 7.72314 25.3659 11.3254 25.3659 15.7678ZM17.0565 9.00438C13.2049 9.00438 10.0705 12.0375 10.0705 15.7678C10.0705 17.2462 10.5643 18.6186 11.4015 19.7335L10.5289 22.243L13.2124 21.4114C14.3149 22.1173 15.6371 22.53 17.0577 22.53C20.9094 22.53 24.0437 19.4957 24.0437 15.7678C24.0424 12.0375 20.9081 9.00438 17.0577 9.00438H17.0565ZM21.2528 17.6207C21.2023 17.5381 21.0659 17.4889 20.8626 17.3891C20.6606 17.2905 19.6566 16.8137 19.471 16.7485C19.2841 16.6844 19.1465 16.6499 19.0126 16.847C18.8775 17.0441 18.486 17.4889 18.3673 17.6207C18.2473 17.7525 18.1299 17.7685 17.9253 17.67C17.7207 17.5714 17.0666 17.362 16.2874 16.6918C15.8435 16.2929 15.4614 15.8331 15.1534 15.3268C15.036 15.1297 15.1408 15.0237 15.2418 14.9252C15.334 14.8352 15.4464 14.6948 15.5487 14.5802C15.6497 14.4644 15.6838 14.3831 15.7507 14.25C15.8189 14.1195 15.7861 14.0037 15.7343 13.9051C15.6838 13.8065 15.2759 12.8358 15.1054 12.4403C14.9375 12.0461 14.767 12.0621 14.6483 12.0621C14.5296 12.0621 14.3098 12.0954 14.3098 12.0954C14.3098 12.0954 13.9019 12.1446 13.715 12.3417C13.5281 12.5389 13.0028 13.0169 13.0028 13.9864C13.0028 14.9572 13.7315 15.8947 13.8337 16.0253C13.9348 16.1571 15.2431 18.2132 17.3128 19.0029C19.3839 19.7914 19.3839 19.529 19.7564 19.4957C20.1302 19.4625 20.9611 19.0177 21.1316 18.5582C21.3034 18.0962 21.3034 17.702 21.2528 17.6207Z" fill="white"/>
+                            <defs>
+                                <linearGradient id="paint0_linear_124_869" x1="16.5126" y1="0" x2="16.5126" y2="33" gradientUnits="userSpaceOnUse">
+                                    <stop stop-color="#03C13D"/>
+                                    <stop offset="1" stop-color="#018F31"/>
+                                </linearGradient>
+                            </defs>
+                        </svg>
+                    </a>
+                    <a href="#" class="vk">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="34" height="33" viewBox="0 0 34 33" fill="none">
+                            <circle cx="16.6088" cy="16.5" r="16.5" fill="#5181B8"/>
+                            <path d="M25.4853 12.3918C25.6191 11.9689 25.4853 11.6587 24.8525 11.6587H22.7564C22.223 11.6587 21.9793 11.927 21.8455 12.2217C21.8455 12.2217 20.7797 14.6949 19.2695 16.2985C18.782 16.7651 18.5593 16.9125 18.2936 16.9125C18.1607 16.9125 17.9676 16.7651 17.9676 16.3421V12.3918C17.9676 11.8843 17.8137 11.6587 17.3693 11.6587H14.0754C13.7428 11.6587 13.5421 11.8934 13.5421 12.1171C13.5421 12.5974 14.2972 12.7084 14.3746 14.0618V16.998C14.3746 17.641 14.2532 17.7584 13.9856 17.7584C13.2754 17.7584 11.5473 15.2761 10.5216 12.4346C10.3219 11.8824 10.1202 11.6596 9.58492 11.6596H7.48973C6.89041 11.6596 6.77094 11.9279 6.77094 12.2226C6.77094 12.752 7.48112 15.3716 10.0791 18.8362C11.8111 21.2021 14.2494 22.4846 16.4708 22.4846C17.8023 22.4846 17.9667 22.1999 17.9667 21.7087V19.9205C17.9667 19.3511 18.0938 19.2365 18.5153 19.2365C18.825 19.2365 19.3584 19.3856 20.6019 20.5253C22.0223 21.877 22.2574 22.4837 23.0555 22.4837H25.1507C25.7491 22.4837 26.0483 22.199 25.8762 21.6368C25.6879 21.0775 25.0093 20.2634 24.1089 19.3001C23.6195 18.7507 22.8883 18.1595 22.6656 17.8639C22.3549 17.4828 22.4448 17.3145 22.6656 16.9761C22.6665 16.977 25.2196 13.5552 25.4853 12.3918Z" fill="white"/>
+                        </svg>
+                    </a>
                 </div>
             </div>
-        </div>
-        <div class="footer-bottom">
-            <div class="footer-copyright">
-                © ООО Техноресурс, 2024
-            </div>
-            <a href="#" class="footer-privacy">
-                Пользовательское соглашение
-            </a>
-        </div>
-    </div>
-</footer>
+			<div class="footer-contacts">
+				<div class="footer-contacts__item">
+					<div class="footer-contacts__ico">
+						<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
+							<path d="M20.5 12C18.7767 12.0021 17.1246 12.7064 15.9061 13.9584C14.6875 15.2104 14.002 16.9079 14 18.6786C13.9979 20.1255 14.4579 21.5332 15.3095 22.6857C15.3095 22.6857 15.4867 22.9255 15.5157 22.9601L19.3431 27.598C19.943 28.3251 21.057 28.3251 21.6569 27.598L25.4867 22.9571C25.5127 22.9249 25.6905 22.6857 25.6905 22.6857L25.6911 22.6839C26.5422 21.5319 27.002 20.1249 27 18.6786C26.998 16.9079 26.3125 15.2104 25.0939 13.9584C23.8754 12.7064 22.2233 12.0021 20.5 12ZM20.5 21.1071C20.0325 21.1071 19.5755 20.9647 19.1868 20.6979C18.7981 20.431 18.4952 20.0517 18.3163 19.6079C18.1374 19.1642 18.0906 18.6759 18.1818 18.2048C18.273 17.7337 18.4981 17.301 18.8287 16.9613C19.1592 16.6217 19.5804 16.3904 20.0389 16.2967C20.4974 16.203 20.9726 16.2511 21.4045 16.4349C21.8364 16.6187 22.2056 16.93 22.4653 17.3293C22.725 17.7287 22.8636 18.1982 22.8636 18.6786C22.8629 19.3224 22.6136 19.9397 22.1705 20.3949C21.7274 20.8502 21.1266 21.1063 20.5 21.1071Z" fill="white"/>
+						</svg>
+					</div>
+					<span>ул. Тополёвая,3 к2</span>
+				</div>
+				<a href="mailto:legionservice@bk.ru" class="footer-contacts__item email">
+					<div class="footer-contacts__ico">
+						<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
+							<path d="M28 16.373V23.5C28 24.163 27.7366 24.7989 27.2678 25.2678C26.7989 25.7366 26.163 26 25.5 26H14.5C13.837 26 13.2011 25.7366 12.7322 25.2678C12.2634 24.7989 12 24.163 12 23.5V16.373L19.746 20.931C19.823 20.9764 19.9107 21.0003 20 21.0003C20.0893 21.0003 20.177 20.9764 20.254 20.931L28 16.373ZM25.5 13C26.1151 12.9999 26.7087 13.2266 27.1672 13.6367C27.6257 14.0469 27.9168 14.6116 27.985 15.223L20 19.92L12.015 15.223C12.0832 14.6116 12.3743 14.0469 12.8328 13.6367C13.2913 13.2266 13.8849 12.9999 14.5 13H25.5Z" fill="white"/>
+						</svg>
+					</div>
+					<span>legionservice@bk.ru</span>
+				</a>
+				<div class="footer-contacts__item phones">
+					<div class="footer-contacts__ico">
+						<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
+							<path d="M27.6889 24.7226L25.9151 23.54L24.3383 22.489C24.034 22.2865 23.625 22.3529 23.4004 22.6412L22.4247 23.8956C22.2151 24.1677 21.838 24.246 21.5375 24.0796C20.8754 23.7113 20.0925 23.3645 18.3651 21.6349C16.6377 19.9053 16.2887 19.1246 15.9204 18.4625C15.754 18.162 15.8323 17.7849 16.1044 17.5754L17.3588 16.5997C17.6471 16.375 17.7135 15.9661 17.5111 15.6617L16.4923 14.1335L15.2774 12.3111C15.0706 12.0009 14.6567 11.9078 14.337 12.0995L12.9359 12.9401C12.5573 13.1632 12.2789 13.5234 12.1585 13.9461C11.7754 15.3431 11.6981 18.4247 16.6368 23.3634C21.5755 28.3021 24.6569 28.2246 26.0538 27.8414C26.4766 27.7211 26.8368 27.4427 27.0599 27.0641L27.9004 25.663C28.0922 25.3433 27.9991 24.9294 27.6889 24.7226Z" fill="white"/>
+						</svg>
+					</div>
+					<div class="footer-contacts__wrapper">
+						<a href="tel:79293833334">+ 7 929 383 33 34</a>
+						<a href="tel:73833751111">+ 7 383 375 11 11</a>
+						<a href="tel:79232377767">+ 7 923 237 77 67 (Автозапчасти)</a>
+					</div>
+				</div>
+			</div>
+			<div class="footer-nav">
+				<div class="footer-menu">
+					<a href="#">
+						<h5>Каталог</h5>
+					</a>
+					<a href="#">
+						<h5>Акции</h5>
+					</a>
+				</div>
+				<div class="footer-menu">
+					<h5>Компания</h5>
+					<ul class="menu">
+						<li>
+							<a href="#">О компании</a>
+						</li>
+						<li>
+							<a href="#">Отзывы</a>
+						</li>
+						<li>
+							<a href="#">Контакты</a>
+						</li>
+						<li>
+							<a href="#">Партнеры</a>
+						</li>
+						<li>
+							<a href="#">Лицензии</a>
+						</li>
+						<li>
+							<a href="#">Документы</a>
+						</li>
+					</ul>
+				</div>
+				<div class="footer-menu">
+					<h5>Информация</h5>
+					<ul class="menu">
+						<li>
+							<a href="#">Магазины</a>
+						</li>
+						<li>
+							<a href="#">Условия оплаты</a>
+						</li>
+						<li>
+							<a href="#">Условия доставки</a>
+						</li>
+						<li>
+							<a href="#">Гарантия на товар</a>
+						</li>
+						<li>
+							<a href="#">Реквизиты</a>
+						</li>
+						<li>
+							<a href="#">Возможности</a>
+						</li>
+					</ul>
+				</div>
+				<div class="footer-menu">
+					<h5>Помощь</h5>
+					<ul class="menu">
+						<li>
+							<a href="#">Условия оплаты</a>
+						</li>
+						<li>
+							<a href="#">Условия доставки</a>
+						</li>
+						<li>
+							<a href="#">Гарантия на товар</a>
+						</li>
+						<li>
+							<a href="#">Вопрос-ответ</a>
+						</li>
+						<li>
+							<a href="#">Обзоры</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="footer-bottom">
+		<div class="footer-bottom__container container">
+			<a href="#" class="footer-policy">
+				Политика конфиденциальности
+			</a>
+			<div class="footer-kontur">
+				<div class="footer-kontur__left">
+					<a href="#" class="footer-kontur__link">Создание сайтов</a>
+					<a href="#" class="footer-kontur__link">Продвижение сайтов</a>
+				</div>
+				<div class="footer-kontur__right">
+					<svg width="70" height="47" viewBox="0 0 70 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path
+							d="M64.049 20.7086V22.8191H64.816C65.6252 22.8191 66.2592 22.5183 66.2592 21.716C66.2592 21.185 65.9976 20.7064 64.9778 20.7064C64.6586 20.7064 64.4857 20.695 64.049 20.7086ZM61.9297 28.1638V18.6392C62.4462 18.6392 64.816 18.6392 65.082 18.6392C67.6115 18.6392 68.5115 19.9314 68.5115 21.6887C68.5115 23.4573 67.4519 24.1798 66.9486 24.4396L69.6288 28.1638H67.0595L64.8293 24.8613H64.049V28.1638H61.9297Z"
+							fill="white"/>
+						<path
+							d="M59.3821 24.0658C59.3821 26.9786 57.582 28.1638 55.5957 28.1638C53.2126 28.1638 51.5566 26.7621 51.5566 23.9701V18.6392H53.6759V23.5074C53.6759 24.9912 54.1126 26.1216 55.5957 26.1216C56.8793 26.1216 57.2628 25.1553 57.2628 23.6305V18.6392H59.3821V24.0658Z"
+							fill="white"/>
+						<path
+							d="M46.2843 46.9034H0.664062V0H46.2843V16.0478H44.1694V2.17434H2.77671V44.7291H44.1694V30.7508H46.2843V46.9034Z"
+							fill="white"/>
+						<path
+							d="M37.1756 28.1661L32.7795 22.4476V28.1661H30.791V18.6367H32.4869L36.8852 24.3803L36.8807 18.6367H38.867L38.8715 28.1661H37.1756Z"
+							fill="white"/>
+						<path d="M41.4209 18.6353H49.1023V20.6774H46.3201V28.1667H44.2008V20.6774H41.4209V18.6353Z"
+							  fill="white"/>
+						<path
+							d="M9.98352 18.6353H12.1028V22.7879L15.1355 18.6353H17.6782L14.1955 23.0341L17.9553 28.1667H15.2685L12.1028 23.6312V28.1667H9.98352V18.6353Z"
+							fill="white"/>
+						<path
+							d="M23.4817 26.2016C25.191 26.2016 26.0777 24.9594 26.0777 23.4005C26.0777 21.7093 24.9338 20.5993 23.4817 20.5993C21.992 20.5993 20.888 21.7093 20.888 23.4005C20.888 24.9845 22.043 26.2016 23.4817 26.2016ZM23.4817 18.6187C26.2196 18.6187 28.2635 20.4534 28.2635 23.4005C28.2635 26.2016 26.2196 28.1823 23.4817 28.1823C20.7461 28.1823 18.7021 26.3452 18.7021 23.4005C18.7021 20.7178 20.6175 18.6187 23.4817 18.6187Z"
+							fill="white"/>
+					</svg>
+				</div>
+			</div>
+			<div class="footer-copy">
+				© 2025 Все права защищены
+			</div>
+		</div>
+	</div>
+</div>
