footer banner has been created

--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  background: #333;
   a {
     transition: all .3s ease;
     &:hover {
@@ -12,8 +11,76 @@
       }
     }
   }
+
+  //footer banner
+  &-banner {
+    background: #F3F4F6;
+    padding: 12px 0;
+    &__container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
+    }
+    &__left {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
+      color: #1C2126;
+      font-size: 16px;
+      font-weight: 500;
+    }
+    &__right {
+      width: 100%;
+      max-width: 500px;
+
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      input {
+        width: 100%;
+        border-radius: 5px;
+        border: 1px solid #DADCDE;
+        background: #FFF;
+        height: 36px;
+        padding: 8px 16px;
+
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        color: #1a1a1a;
+        outline: none;
+        &::placeholder {
+          color: #93999E;
+
+        }
+      }
+      button {
+        color: #FFF;
+        text-align: center;
+        font-size: 14px;
+        font-weight: 500;
+
+        padding: 0 24px;
+
+        border-radius: 5px;
+        background: #08A826;
+        border: none;
+        height: 36px;
+        transition: all .3s ease;
+        cursor: pointer;
+        &:hover {
+          opacity: 0.7;
+        }
+      }
+    }
+  }
+
   //footer top
   &-top {
+    background: #333;
     padding: 50px 0;
     &__container {
       display: flex;
@@ -115,6 +182,7 @@
 
   //footer bottom
   &-bottom {
+    background: #333;
     padding: 25px 0 50px;
     border-top: 1px solid rgba(255, 255, 255, 0.13);
     &__container {
