--- a/sass/common/_style.scss
+++ b/sass/common/_style.scss
@@ -135,7 +135,7 @@ h3 {
 }
 
 h4 {
-  font-family: var(--second-family);
+  font-family: var(--font-family);
   font-weight: 800;
   font-size: 18px;
   color: #1a1a1a;
