--- a/sass/blocks/_categories.scss
+++ b/sass/blocks/_categories.scss
@@ -35,6 +35,51 @@
       margin: 0;
     }
   }
+  &-list {
+    display: grid;
+    grid-template: auto / repeat(3, 1fr);
+    gap: 24px;
+  }
+}
+
+.categories2 {
+  margin-bottom: 60px;
+  &-item {
+    border-radius: 20px;
+    background: #F3F4F6;
+    padding: 24px;
+    transition: all .3s ease;
+    &__heading {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      margin-bottom: 14px;
+      p {
+        margin: 0;
+
+        color: var(--2-, #535353);
+        font-size: 12px;
+        font-weight: 700;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+      }
+      h3 {
+        margin: 0;
+      }
+    }
+    &__image {
+      width: 100%;
+      height: 224px;
+      img {
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
+      }
+    }
+    &:hover {
+      opacity: 0.7;
+    }
+  }
 }
 
 .js-swiper-navigation {
