about section has been created

--- a/sass/_blocks.scss
+++ b/sass/_blocks.scss
@@ -3,5 +3,7 @@
 @use 'blocks/categories';
 @use 'blocks/advantages';
 
+@use 'blocks/product-card';
 @use 'blocks/stock';
+@use 'blocks/about';
 @use 'blocks/footer';
