recent section has been created

--- a/sass/blocks/_product-card.scss
+++ b/sass/blocks/_product-card.scss
@@ -68,6 +68,7 @@
     display: -webkit-box;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    line-height: 1.25;
   }
   &-descr {
     -webkit-line-clamp: 3;
