hit section has bee created

--- a/sass/_blocks.scss
+++ b/sass/_blocks.scss
@@ -2,7 +2,7 @@
 @use 'blocks/promo';
 @use 'blocks/categories';
 @use 'blocks/advantages';
-
+@use 'blocks/hit';
 @use 'blocks/product-card';
 @use 'blocks/stock';
 @use 'blocks/about';
