--- a/sass/blocks/_categories.scss
+++ b/sass/blocks/_categories.scss
@@ -12,6 +12,7 @@
 
     position: relative;
     overflow: hidden;
+    transition: all .3s ease;
     img {
       position: absolute;
       bottom: 10px;
@@ -33,6 +34,9 @@
     }
     &__title {
       margin: 0;
+    }
+    &:hover {
+      opacity: 0.7;
     }
   }
   &-list {
