--- a/sass/blocks/_catalog.scss
+++ b/sass/blocks/_catalog.scss
@@ -1,4 +1,5 @@
 .catalog {
+  //catalog top
   &-heading {
     display: flex;
     align-items: flex-end;
@@ -18,6 +19,7 @@
   }
   &-slider {
     position: relative;
+    margin-bottom: 40px;
   }
 
   //catalog item
@@ -52,6 +54,118 @@
     }
     &:hover {
       opacity: 0.7;
+    }
+  }
+
+  //catalog-content
+  &-content {
+    display: flex;
+    gap: 40px;
+  }
+  &-left {
+    width: 100%;
+    max-width: 206px;
+  }
+  &-right {
+    width: 100%;
+  }
+  &-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+  &-sort {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    &__title {
+      color: #56595D;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 142.857%; /* 142.857% */
+    }
+    &__item {
+      color: var(--, #1A1A1A);
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 142.857%; /* 142.857% */
+      transition: all .3s ease;
+      cursor: pointer;
+      &.active {
+        color: #08A826;
+        cursor: default;
+        pointer-events: none;
+      }
+    }
+    &__wrapper {
+      display: flex;
+      align-items: center;
+      gap: 25px;
+    }
+  }
+  &-view {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    &__item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: all .3s ease;
+      &:hover:not(&.active) {
+        opacity: 0.7;
+      }
+      &.active {
+        pointer-events: none;
+        path {
+          fill: #08A826;
+        }
+      }
+    }
+  }
+
+  //catalog-list
+  .catalog-list {
+    display: grid;
+    grid-template: auto / repeat(4, 1fr);
+    gap: 20px;
+  }
+
+  //catalog-paginate
+  .catalog-paginate {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 14px;
+
+    margin-top: 50px;
+    &__item {
+      display: flex;
+      width: 40px;
+      height: 40px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border-radius: 6px;
+      border: 1px solid #DCDCDC;
+      background: #FFF;
+
+      color: #1A1A1A;
+      font-size: 16px;
+      font-weight: 400;
+      &.active {
+        color: #FFF;
+        border: 1px solid #08A826;
+        background: #08A826;
+        cursor: default;
+        pointer-events: none;
+      }
+      &:hover:not(&.active) {
+        opacity: 0.7;
+      }
     }
   }
 }
