--- a/sass/blocks/_catalog.scss
+++ b/sass/blocks/_catalog.scss
@@ -65,16 +65,28 @@
   &-left {
     width: 100%;
     max-width: 206px;
+    &__count {
+      color: #1A1A1A;
+      font-family: var(--second-family);
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 150%; /* 150% */
+
+      height: 45px;
+      border-bottom: 1px solid #DADCDE;
+    }
   }
   &-right {
     width: 100%;
   }
   &-wrapper {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     gap: 10px;
-    margin-bottom: 20px;
+    height: 45px;
+
   }
   &-sort {
     display: flex;
@@ -128,14 +140,14 @@
   }
 
   //catalog-list
-  .catalog-list {
+  &-list {
     display: grid;
     grid-template: auto / repeat(4, 1fr);
     gap: 20px;
   }
 
   //catalog-paginate
-  .catalog-paginate {
+  &-paginate {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -165,6 +177,55 @@
       }
       &:hover:not(&.active) {
         opacity: 0.7;
+      }
+    }
+  }
+
+  //catalog-menu
+  &-menu {
+    border-bottom: 1px solid #DADCDE;
+    &__title {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
+
+      color: #1C2126;
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 142.857% ; /* 142.857% */
+
+      padding: 18px 0;
+      cursor: pointer;
+      &.active {
+        svg {
+          transform: rotate(180deg);
+        }
+      }
+    }
+    &__list {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-height: 0;
+      opacity: 0;
+      visibility: hidden;
+      transition: all .3s ease;
+      a {
+        color: #1A1A1A;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 142.857%; /* 142.857% */
+        &:hover {
+          color: #08A826;
+        }
+      }
+      &.active {
+        max-height: 1000px;
+        padding-bottom: 18px !important;
+        opacity: 1;
+        visibility: visible;
       }
     }
   }
