catalog page has been created + change structure at product card

--- a/sass/blocks/_catalog.scss
+++ b/sass/blocks/_catalog.scss
@@ -144,6 +144,9 @@
     display: grid;
     grid-template: auto / repeat(4, 1fr);
     gap: 20px;
+    &.row {
+      grid-template: auto / 1fr;
+    }
   }
 
   //catalog-paginate
