--- a/sass/blocks/_product-card.scss
+++ b/sass/blocks/_product-card.scss
@@ -61,7 +61,7 @@
     color: #1C2126;
     font-size: 14px;
     font-weight: 600;
-    height: 60px;
+    height: 55px;
 
     -webkit-line-clamp: 3;
     line-clamp: 3;
@@ -136,6 +136,14 @@
       background: #08A826;
       transition: all .3s ease;
       cursor: pointer;
+      span {
+        display: none;
+        color: #FFF;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 98.188%; /* 98.188% */
+      }
       &:hover {
         opacity: 0.7;
       }
@@ -230,6 +238,58 @@
       justify-content: center;
       &:hover {
         opacity: 0.7;
+      }
+    }
+  }
+  &.row {
+    display: flex;
+    align-items: flex-start;
+    gap: 18px;
+    padding: 22px;
+    .productCard {
+      &-image {
+        width: 100%;
+        max-width: 190px;
+        height: 190px;
+      }
+      &-bottom {
+        flex-direction: column;
+        gap: 10px;
+        position: static;
+        margin-right: 30px;
+      }
+      &-content {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+      }
+      &-stars {
+        margin: 0;
+      }
+      &-title {
+        height: auto;
+      }
+      &-bottom {
+        width: auto;
+        align-items: flex-start;
+      }
+      &-cart {
+        &__ico {
+          width: 170px;
+          border-radius: 10px;
+
+          gap: 10px;
+          span {
+            display: block;
+          }
+        }
+        &__count {
+          width: 170px;
+        }
+      }
+      &-links {
+        position: static;
       }
     }
   }
