--- a/sass/blocks/_about.scss
+++ b/sass/blocks/_about.scss
@@ -36,3 +36,113 @@
     overflow: hidden;
   }
 }
+
+.aboutPage {
+  &-top {
+    display: flex;
+    align-items: stretch;
+    gap: 25px;
+    margin-bottom: 20px;
+  }
+  &-right {
+    width: 480px;
+    min-width: 480px;
+    height: auto;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 20px;
+    }
+  }
+  &-subtitle {
+    color: #1A1A1A;
+    font-size: 24px;
+    font-weight: 700;
+    margin: 30px 0 10px;
+  }
+  &-accent {
+    border-radius: 20px;
+    background: #F3F4F6;
+    padding: 20px 30px;
+    position: relative;
+    overflow: hidden;
+    &:before {
+      content: '';
+      display: block;
+      width: 5px;
+      height: 100%;
+      background: #08A826;
+
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
+  &-number {
+    margin-bottom: 40px;
+    &__wrapper {
+      display: flex;
+      gap: 70px;
+      align-items: flex-start;
+      flex-wrap: wrap;
+    }
+    &__item {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      padding-left: 40px;
+    }
+    &__top {
+      color: var(--1, #08A826);
+      font-size: 50px;
+      font-weight: 800;
+      position: relative;
+      &::before {
+        content: '';
+        display: block;
+        width: 10px;
+        height: 10px;
+        border-bottom: 3px solid #535353;
+        border-right: 3px solid #535353;
+
+        transform: rotate(135deg) translateX(-50%);
+        position: absolute;
+        top: 50%;
+        left: -40px;
+      }
+    }
+    &__bottom {
+      color: var(--, #1A1A1A);
+      font-size: 16px;
+      font-weight: 400;
+    }
+  }
+  &-advantages {
+    margin-bottom: 40px;
+  }
+  &-direction {
+    &__list {
+      display: grid;
+      grid-template: auto / repeat(3, 1fr);
+      gap: 24px;
+    }
+    &__item {
+      border-radius: 20px;
+      background: #F3F4F6;
+      padding: 24px;
+      img {
+        width: 100%;
+        height: 200px;
+        object-fit: contain;
+      }
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+    &__title {
+      font-weight: 600;
+      margin-bottom: 30px;
+    }
+  }
+}
