--- a/sass/common/_style.scss
+++ b/sass/common/_style.scss
@@ -154,7 +154,7 @@ h5 {
   margin-bottom: 20px;
 }
 
-p {
+p, li {
   font-weight: 400;
   font-size: 16px;
   color: #535353;
@@ -162,6 +162,10 @@ p {
   &:last-child {
     margin-bottom: 0;
   }
+}
+
+li {
+  margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
