product top has been created

--- a/sass/_blocks.scss
+++ b/sass/_blocks.scss
@@ -10,8 +10,8 @@
 @use 'blocks/recent';
 @use 'blocks/footer';
 
-
 @use 'blocks/catalog';
 @use 'blocks/cart';
+@use 'blocks/product';
 
 @use 'blocks/breadcrumbs';
