--- a/sass/blocks/_product.scss
+++ b/sass/blocks/_product.scss
@@ -346,4 +346,87 @@
       }
     }
   }
+
+  //product bottom
+  &-bottom {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  //product tabs
+  &-tabs {
+    background: #F4F5F6;
+    display: flex;
+    align-items: stretch;
+    gap: 25px;
+    &__item {
+      display: inline-flex;
+      padding: 12px 23px 13px 23px;
+      justify-content: center;
+      align-items: center;
+      border-bottom: 2px solid transparent;
+
+      color: var(--2-, #535353);
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 22.5px; /* 140.625% */
+
+      transition: all .3s ease;
+      cursor: pointer;
+      &.active {
+        font-weight: 700;
+        border-bottom: 2px solid rgba(8, 168, 38, 1);
+      }
+    }
+  }
+
+  //product-content
+  &-content {
+    &__item {
+      display: none;
+      &.active {
+        display: block;
+      }
+    }
+    &__title {
+      color: var(--, #1A1A1A);
+      font-size: 24px;
+      font-weight: 700;
+      line-height: 93.75%; /* 93.75% */
+      margin-bottom: 20px;
+    }
+    &__wrapper {
+      &.description {
+        width: 100%;
+        max-width: 993px;
+      }
+    }
+  }
+
+  //product characterictic
+  &-characteristic {
+    max-width: 700px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    &__left {
+      color: var(--2-, #535353);
+      font-size: 16px;
+      font-weight: 400;
+    }
+    &__dots {
+      flex: 1;
+      border-bottom: 1px dashed #DADCDE;;
+    }
+    &__right {
+      color: var(--, #1A1A1A);
+      font-size: 16px;
+      font-weight: 500;
+    }
+    &__item {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
 }
