adaptive for about page has been created

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,2 +1,6 @@
 @use 'blocks/media/header';
+@use 'blocks/media/advantages';
+@use 'blocks/media/breadcrumbs';
 @use 'blocks/media/footer';
+
+@use 'blocks/media/about';
