--- a/sass/blocks/_advantages.scss
+++ b/sass/blocks/_advantages.scss
@@ -20,13 +20,13 @@
       margin-bottom: 18px;
     }
     &__title {
-      color: var(--, #1A1A1A);
+      color: #1A1A1A;
       font-size: 16px;
       font-weight: 600;
       margin-bottom: 9px;
     }
     &__descr {
-      color: var(--2-, #535353);
+      color: #535353;
       font-size: 14px;
       font-weight: 500;
       margin-bottom: 0;
