--- a/sass/common/_style.scss
+++ b/sass/common/_style.scss
@@ -180,17 +180,53 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (max-width: 1200px) {
-
+  .container {
+    max-width: 970px;
+  }
 }
 
 @media (max-width: 992px) {
-
+  .container {
+    max-width: 750px;
+  }
 }
 
 @media (max-width: 768px) {
+  .container {
+    max-width: 700px;
+  }
+  p, li {
+    margin-bottom: 10px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  h4 {
+    font-size: 16px;
+  }
 
 }
 
 @media (max-width: 576px) {
 
+  h3 {
+    font-size: 20px;
+  }
+
+  h4 {
+    font-size: 14px;
+  }
+
+  h5 {
+    font-size: 14px;
+  }
+
+  .container {
+    max-width: 540px;
+  }
 }
