--- a/sass/blocks/_product-card.scss
+++ b/sass/blocks/_product-card.scss
@@ -299,6 +299,7 @@
     border-radius: 0;
     border-bottom: 1px solid #DADCDE;
     width: 100%;
+    padding: 22px 0;
     .productCard {
       &-left {
         display: flex;
