a little bit fix

--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -233,10 +233,10 @@
   &-menu {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
-    column-gap: 20px;
-    row-gap: 15px;
+    column-gap: 30px;
+    row-gap: 20px;
     li {
       margin: 0;
     }
