adaptive for footer has been created

--- a/partials/_footer.html
+++ b/partials/_footer.html
@@ -85,7 +85,7 @@
 						<h5>Акции</h5>
 					</a>
 				</div>
-				<div class="footer-menu">
+				<div class="footer-menu has-child">
 					<h5>Компания</h5>
 					<ul class="menu">
 						<li>
@@ -108,7 +108,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="footer-menu">
+				<div class="footer-menu has-child">
 					<h5>Информация</h5>
 					<ul class="menu">
 						<li>
@@ -131,7 +131,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="footer-menu">
+				<div class="footer-menu has-child">
 					<h5>Помощь</h5>
 					<ul class="menu">
 						<li>
