--- a/sass/blocks/media/_mobile-menu.scss
+++ b/sass/blocks/media/_mobile-menu.scss
@@ -6,7 +6,7 @@
 
     padding: 15px 16px;
     background: #FFF;
-    border-radius: 15px 15px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
     box-shadow: 0px -1px 14px 0px rgba(230, 235, 243, 0.50);
 
     position: fixed;
@@ -19,6 +19,7 @@
       display: flex;
       align-items: center;
       gap: 10px;
+      max-width: 311px;
     }
     &__ico {
       width: 28px;
