adaptive for product page has been created

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -6,6 +6,7 @@
 @use 'blocks/media/about';
 @use 'blocks/media/cart';
 @use 'blocks/media/catalog';
+@use 'blocks/media/product';
 
 @use 'blocks/media/product-card';
 @use 'blocks/media/mobile-menu';
