--- a/sass/blocks/_breadcrumbs.scss
+++ b/sass/blocks/_breadcrumbs.scss
@@ -12,7 +12,8 @@
   &-content {
     display: flex;
     align-items: center;
-    gap: 20px;
+    column-gap: 20px;
+    row-gap: 10px;
     flex-wrap: wrap;
   }
   &-item {
