--- a/sass/blocks/_product.scss
+++ b/sass/blocks/_product.scss
@@ -132,10 +132,11 @@
       height: 500px;
     }
     &__item {
+      background: #fff;
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
   }
@@ -414,19 +415,23 @@
       color: var(--2-, #535353);
       font-size: 16px;
       font-weight: 400;
+      white-space: nowrap;
     }
     &__dots {
       flex: 1;
+      min-width: 10px;
       border-bottom: 1px dashed #DADCDE;;
     }
     &__right {
       color: var(--, #1A1A1A);
       font-size: 16px;
       font-weight: 500;
+      text-align: right;
     }
     &__item {
       display: flex;
       justify-content: space-between;
+      align-items: flex-end;
     }
   }
 
