--- a/sass/common/_style.scss
+++ b/sass/common/_style.scss
@@ -117,6 +117,7 @@ h1 {
   font-size: 45px;
   color: #121212;
   margin-bottom: 16px;
+  line-height: 1.2;
 }
 
 h2 {
@@ -125,6 +126,7 @@ h2 {
   font-size: 30px;
   color: #1a1a1a;
   margin-bottom: 20px;
+  line-height: 1.2;
 }
 
 h3 {
@@ -132,6 +134,7 @@ h3 {
   font-weight: 800;
   font-size: 20px;
   color: #1a1a1a;
+  line-height: 1.2;
 }
 
 h4 {
@@ -139,6 +142,7 @@ h4 {
   font-weight: 800;
   font-size: 18px;
   color: #1a1a1a;
+  line-height: 1.2;
 }
 
 h5 {
