adaptive for main page has been created

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,4 +1,9 @@
 @use 'blocks/media/header';
+@use 'blocks/media/categories';
+@use 'blocks/media/hit';
+@use 'blocks/media/stock';
+@use 'blocks/media/review';
+@use 'blocks/media/promo';
 @use 'blocks/media/advantages';
 @use 'blocks/media/breadcrumbs';
 @use 'blocks/media/footer';
