--- a/sass/blocks/_hit.scss
+++ b/sass/blocks/_hit.scss
@@ -12,8 +12,10 @@
   }
   &-tabs {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    gap: 15px;
+    column-gap: 15px;
+    row-gap: 10px;
     div {
       color: var(--2-, #535353);
       font-size: 14px;
