--- a/sass/blocks/_promo.scss
+++ b/sass/blocks/_promo.scss
@@ -1,10 +1,10 @@
 .promo {
   margin-bottom: 40px;
-  background: #F3F4F6;
   &-slide {
     padding: 110px 0;
     position: relative;
     overflow: hidden;
+    background: #F3F4F6;
     &__content {
       max-width: 685px;
       display: flex;
@@ -48,6 +48,7 @@
       position: absolute;
       top: -44px;
       left: 55%;
+      min-width: 300px;
     }
   }
   .swiper-pagination-bullet-active {
