--- a/sass/blocks/media/_advantages.scss
+++ b/sass/blocks/media/_advantages.scss
@@ -1,4 +1,7 @@
 @media (max-width: 768px) {
+  .advantages {
+    margin-bottom: 30px;
+  }
   .advantages-slider {
     .swiper {
       overflow: visible;
