cities popup has been created

--- a/sass/_blocks.scss
+++ b/sass/_blocks.scss
@@ -9,6 +9,7 @@
 @use 'blocks/review';
 @use 'blocks/recent';
 @use 'blocks/footer';
+@use 'blocks/cities';
 
 @use 'blocks/catalog';
 @use 'blocks/cart';
