--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -7,6 +7,7 @@
 @use 'blocks/media/advantages';
 @use 'blocks/media/breadcrumbs';
 @use 'blocks/media/footer';
+@use 'blocks/media/cities';
 
 @use 'blocks/media/about';
 @use 'blocks/media/cart';
