SUKA DIZAYNER YA V AHUE 4TO ETO ZA MUSOR

--- a/partials/_header.html
+++ b/partials/_header.html
@@ -3,7 +3,7 @@
         <div class="header-top">
             <div class="header-top__container container">
                 <div class="header-cities">
-                    <a href="#" data-src="#cities-popup" data-fancybox class="header-cities__current">
+                    <a href="#" data-src="#cities-popup-desctop" data-fancybox class="header-cities__current">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M19 1L12.274 19L10.494 12.48C10.3368 11.9069 10.0288 11.3864 9.60215 10.9727C9.17547 10.5591 8.6457 10.2674 8.068 10.128L7.845 10.082L1 8.908L19 1ZM15.468 4.736L7.895 8.062L8.25 8.124L8.539 8.184C9.42461 8.39801 10.2405 8.83567 10.9086 9.45512C11.5767 10.0746 12.0747 10.8551 12.355 11.722L12.424 11.954L12.571 12.49L15.468 4.736Z" fill="#535353"/>
                             <path d="M5 17C6.10457 17 7 16.1046 7 15C7 13.8954 6.10457 13 5 13C3.89543 13 3 13.8954 3 15C3 16.1046 3.89543 17 5 17Z" fill="#08A826"/>
@@ -276,8 +276,8 @@
     </div>
 </section>
 
-<!--попап с выбором города-->
-<section class="cities" id="cities-popup" style="display: none">
+<!--попап с выбором города десктоп-->
+<section class="cities" id="cities-popup-desctop" style="display: none">
     <div class="cities-content">
         <div class="cities-top">
             <h3 class="cities-title">
@@ -371,3 +371,5 @@
         </div>
     </div>
 </section>
+
+<!--мобильный фильтр в каталоге-->
