--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -8,6 +8,7 @@
 @use 'blocks/media/breadcrumbs';
 @use 'blocks/media/footer';
 @use 'blocks/media/cities';
+@use 'blocks/media/mobile-filter';
 
 @use 'blocks/media/about';
 @use 'blocks/media/cart';
