--- a/sass/_blocks.scss
+++ b/sass/_blocks.scss
@@ -10,6 +10,7 @@
 @use 'blocks/recent';
 @use 'blocks/footer';
 @use 'blocks/cities';
+@use 'blocks/mobile-filter';
 
 @use 'blocks/catalog';
 @use 'blocks/cart';
