--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -9,6 +9,7 @@
 @use 'blocks/media/footer';
 @use 'blocks/media/cities';
 @use 'blocks/media/mobile-filter';
+@use 'blocks/media/burger';
 
 @use 'blocks/media/about';
 @use 'blocks/media/cart';
