--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -341,4 +341,20 @@
     cursor: pointer;
     transition: all .3s ease;
   }
+  &-burger {
+    .open {
+      display: block;
+    }
+    .close {
+      display: none;
+    }
+    &.active {
+      .open {
+        display: none !important;
+      }
+      .close {
+        display: block !important;
+      }
+    }
+  }
 }
