simple dropdown menu has been created

--- a/partials/_header.html
+++ b/partials/_header.html
@@ -216,10 +216,17 @@
                             Компания
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            Контакты
-                        </a>
+                    <li class="has-child">
+                        <a href="#">Компания</a>
+                        <ul class="submenu">
+                            <li><a href="#">О компании</a></li>
+                            <li><a href="#">Отзывы</a></li>
+                            <li><a href="#">Условия оплаты</a></li>
+                            <li><a href="#">Условия доставки</a></li>
+                            <li><a href="#">Гарантия на товар</a></li>
+                            <li><a href="#">Контакты</a></li>
+                            <li><a href="#">Политика конфиденциальности</a></li>
+                        </ul>
                     </li>
                     <li>
                         <a href="#">
